--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,5 @@
-sudo: false
-git:
-  depth: 1
 branches:
   except: /^v\d/
 language: node_js
-node_js: stable
-script:
-  - npm run-script pretest
-  - npm run-script coverage
-after_script:
-  - npm install istanbul-coveralls
-  - node node_modules/.bin/istanbul-coveralls
-notifications:
-  email: false
+node_js: node
+after_script: cat coverage/lcov.info | npx coveralls
