--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "eslint --config @shinnn/node index.js test.js",
     "test": "istanbul cover test.js"
   },
-  "license": "MIT",
+  "license": "ISC",
   "files": [
     "index.js"
   ],
